Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/NoclosedString.ru
/? Error Léxico, no se cerró string, salida: String inválido
"hola